--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,22 +31,22 @@ dependencies:
   bloc: ^8.1.4
   cached_network_image: ^3.3.1
   card_swiper: ^3.0.1
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   dartz: ^0.10.1
-  dio: ^5.4.2+1
+  dio: ^5.5.0
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.5
+  flutter_bloc: ^8.1.6
   flutter_rating_bar: ^4.0.1
-  flutter_svg: ^2.0.10+1
+  flutter_svg: ^2.0.10
   font_awesome_flutter: ^10.7.0
-  get_it: ^7.6.7
+  get_it: ^7.7.0
   google_fonts: ^6.2.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
 
 dev_dependencies:
-  build_runner: ^2.4.9
+  build_runner: ^2.4.11
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
