--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_native_splash: ^2.4.0
   flutter_rating_bar: ^4.0.1
   flutter_svg: ^2.0.10
   font_awesome_flutter: ^10.7.0
