--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   json_annotation: ^4.9.0
+  liquid_pull_to_refresh: ^3.0.1
   retrofit: ^4.1.0
 
 dev_dependencies:
