--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   json_annotation: ^4.9.0
   liquid_pull_to_refresh: ^3.0.1
   retrofit: ^4.1.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   build_runner: ^2.4.11
